# gui-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  GUI_STANDARD.md  LICENSE  PROMPTS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  windows-dwm.yml
src/chodzkos_gui_kit/: __init__.py  config.py  palette.py  release.py
src/chodzkos_gui_kit/qt/: __init__.py  dialogs.py  icons.py  theme.py  titlebar.py
src/chodzkos_gui_kit/qt/widgets/: __init__.py  about.py  file_list.py  help_html.py  help_window.py  log_view.py  path_entry.py  scroll.py
src/chodzkos_gui_kit/tk/: __init__.py  theme.py  titlebar.py
src/chodzkos_gui_kit/winutil/: __init__.py  dwm.py
tests/: test_config.py  test_palette.py  test_release.py  test_tk_theme.py  test_version.py
tests/qt/: .gitkeep  conftest.py  test_about.py  test_dialogs.py  test_dwm.py  test_file_list.py  test_help_window.py  test_icons.py  test_log_view.py  test_path_entry.py  test_scroll.py  test_theme.py  test_titlebar.py
